Created basic HTML structure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,30 @@
   </head>
   <body>
     <main>
-      
+      <header class="header">Let's Calculate!</header>
+      <section class="calculator">
+        <output class="calculator__history"></output>
+        <output class="calculator__answer"></output>
+        <section class="calculator__buttons">
+          <button type="button" class="calculator__button-clear"></button>
+          <button type="button" class="calculator__button-divide"></button>
+          <button type="button" class="calculator__button-seven"></button>
+          <button type="button" class="calculator__button-eight"></button>
+          <button type="button" class="calculator__button-nine"></button>
+          <button type="button" class="calculator__button-times"></button>
+          <button type="button" class="calculator__button-four"></button>
+          <button type="button" class="calculator__button-five"></button>
+          <button type="button" class="calculator__button-six"></button>
+          <button type="button" class="calculator__button-minus"></button>
+          <button type="button" class="calculator__button-one"></button>
+          <button type="button" class="calculator__button-two"></button>
+          <button type="button" class="calculator__button-three"></button>
+          <button type="button" class="calculator__button-plus"></button>
+          <button type="button" class="calculator__button-zero"></button>
+          <button type="button" class="calculator__button-dot"></button>
+          <button type="button" class="calculator__button-equals"></button>
+        </section>
+      </section>
     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
