--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
   <body>
     <main>
       <header class="header">Let's Calculate!</header>
+      <img src="./src/assets/calculator.png" alt="Cat with calculator">
       <section class="calculator">
         <output class="calculator__history"></output>
         <output class="calculator__answer"></output>
         <section class="calculator__buttons">
-          <button type="button" class="calculator__button-clear"></button>
-          <button type="button" class="calculator__button-divide"></button>
-          <button type="button" class="calculator__button-seven"></button>
-          <button type="button" class="calculator__button-eight"></button>
-          <button type="button" class="calculator__button-nine"></button>
-          <button type="button" class="calculator__button-times"></button>
-          <button type="button" class="calculator__button-four"></button>
-          <button type="button" class="calculator__button-five"></button>
-          <button type="button" class="calculator__button-six"></button>
-          <button type="button" class="calculator__button-minus"></button>
-          <button type="button" class="calculator__button-one"></button>
-          <button type="button" class="calculator__button-two"></button>
-          <button type="button" class="calculator__button-three"></button>
-          <button type="button" class="calculator__button-plus"></button>
-          <button type="button" class="calculator__button-zero"></button>
-          <button type="button" class="calculator__button-dot"></button>
-          <button type="button" class="calculator__button-equals"></button>
+          <button type="button" class="calculator__button-clear">C</button>
+          <button type="button" class="calculator__button-divide"><img src="./src/assets/divide.svg" alt="Division"></button>
+          <button type="button" class="calculator__button-seven">7</button>
+          <button type="button" class="calculator__button-eight">8</button>
+          <button type="button" class="calculator__button-nine">9</button>
+          <button type="button" class="calculator__button-multiply"><img src="./src/assets/x.svg" alt="Multiplication"></button>
+          <button type="button" class="calculator__button-four">4</button>
+          <button type="button" class="calculator__button-five">5</button>
+          <button type="button" class="calculator__button-six">6</button>
+          <button type="button" class="calculator__button-minus"><img src="./src/assets/minus.svg" alt="Subtraction"></button>
+          <button type="button" class="calculator__button-one">1</button>
+          <button type="button" class="calculator__button-two">2</button>
+          <button type="button" class="calculator__button-three">3</button>
+          <button type="button" class="calculator__button-plus"><img src="./src/assets/plus.svg" alt="Addition"></button>
+          <button type="button" class="calculator__button-zero">0</button>
+          <button type="button" class="calculator__button-dot">.</button>
+          <button type="button" class="calculator__button-equals"><img src="./src/assets/equal.svg" alt="Equals"></button>
         </section>
       </section>
     </main>
