--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <header class="header">Let's Calculate!</header>
-      <img src="./src/assets/calculator.png" alt="Cat with calculator" />
+      <img class="cat-img" src="./src/assets/calculator.png" alt="Cat with calculator" />
       <section class="calculator">
         <output class="calculator__history"></output>
         <output class="calculator__answer"></output>
@@ -43,7 +43,7 @@
             <img src="./src/assets/plus.svg" alt="Addition" />
           </button>
           <button type="button" class="calculator__button-zero">0</button>
-          <button type="button" class="calculator__button-dot">.</button>
+          <button type="button" class="calculator__button-dec">.</button>
           <button type="button" class="calculator__button-equals">
             <img src="./src/assets/equal.svg" alt="Equals" />
           </button>
