Added gradient background and updated some styles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Calculator</title>
   </head>
   <body>
-    <section class="header-section">
-      <header class="header">Let's Calculate!</header>
+    <section class="header">
       <img
-        class="cat-img"
+        class="header__cat"
         src="./src/assets/calculator.png"
         alt="Cat with calculator"
       />
+      <header class="header__text">Let's Calculate!</header>
     </section>
     <main>
       <section class="calculator">
@@ -141,7 +141,7 @@
         </button>
         <button
           type="button"
-          class="calculator__button calculator__button-equals"
+          class="calculator__button calculator__button-equals calculator__button--equal"
         >
           <img
             class="calculator__img"
