Added styles for answer and history outputs

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </section>
     <main>
       <section class="calculator">
-        <output class="calculator__history"></output>
-        <output class="calculator__answer"></output>
+        <output class="calculator__history">sample</output>
+        <output class="calculator__answer">sample</output>
         <button
           type="button"
           class="calculator__button calculator__button-clear"
