Added switch statement for operators

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <section class="header">
       <img
         class="header__cat"
-        src="./src/assets/calculator.png"
+        src="./src/assets/cat_icon.png"
         alt="Cat with calculator"
       />
-      <header class="header__text">Let's Calculate!</header>
+      <header class="header__text">Let's <span class="header__text header__text--letterT">Cat</span>culate!</header>
     </section>
     <main>
       <section class="calculator">
-        <output class="calculator__history">sample</output>
-        <output class="calculator__answer">sample</output>
+        <output class="calculator__history"></output>
+        <output class="calculator__answer"></output>
         <button
           type="button"
           class="calculator__button calculator__button-clear"
