Updated modifier's name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         alt="Cat with calculator"
       />
       <header class="header__text">
-        Let's <span class="header__text header__text--letterT">Cat</span>culate!
+        Let's <span class="header__text header__text--cat">Cat</span>culate!
       </header>
     </section>
     <main>
